--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="light" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,7 +65,7 @@
 
           <button class="my-5">
             <a
-              href="#"
+              href="#ticket-booking"
               class="bg-[#1DD100] text-[#030712] font-bold py-4 px-8 rounded-xl text-xl cursor-pointer"
             >
               Buy Tickets</a
@@ -76,7 +76,7 @@
 
       <!-- Card Area -->
       <div
-        class="absolute flex flex-wrap items-center justify-center w-full gap-12 lg:-bottom-14"
+        class="flex flex-wrap items-center justify-center w-full gap-12 lg:absolute lg:-bottom-14"
       >
         <!-- Card -->
         <div
@@ -84,33 +84,148 @@
         >
           <img src="./images/people.png" alt="img" />
           <div>
-            <h2 class="text-4xl font-bold">500K+</h2>
+            <h2 class="mb-2 font-sans text-4xl font-bold">500K+</h2>
             <p>Registered users</p>
           </div>
         </div>
+
+        <!-- Card -->
         <div
           class="flex flex-col gap-5 p-8 bg-white rounded-2xl border-b-4 border-[#1DD100] md:flex-row"
         >
           <img src="./images/ticket-cupon.png" alt="img" />
           <div>
-            <h2 class="text-4xl font-bold">1.7 lacks</h2>
+            <h2 class="mb-2 font-sans text-4xl font-bold">1.7 lacks</h2>
             <p>Tickets sold</p>
           </div>
         </div>
+
+        <!-- Card -->
         <div
           class="flex flex-col gap-5 p-8 bg-white rounded-2xl border-b-4 border-[#1DD100] md:flex-row"
         >
           <img src="./images/stoppage.png" alt="img" />
           <div>
-            <h2 class="text-4xl font-bold">80K+</h2>
+            <h2 class="mb-2 font-sans text-4xl font-bold">80K+</h2>
             <p>Rental partners</p>
           </div>
         </div>
       </div>
     </header>
 
-    <main></main>
-    <footer></footer>
+    <main>
+      <!-- Offer Section -->
+      <section class="container pb-20 mx-auto pt-36">
+        <h2 class="text-3xl font-bold text-center md:text-5xl">
+          Best offers for you
+        </h2>
+        <!-- Card Container -->
+        <div
+          class="flex flex-wrap items-center justify-center gap-8 my-16 lg:flex-nowrap"
+        >
+          <!-- Card -->
+          <div class="bg-[#FFBF0F] flex rounded-3xl w-full lg:w-auto">
+            <div class="flex flex-col justify-center p-8">
+              <h3 class="text-4xl font-bold text-[#030712d2] xl:text-5xl">
+                15% OFF
+              </h3>
+              <h5 class="text-lg font-bold text-[#030712d2] my-2">
+                on your next purchase
+              </h5>
+              <p class="text-[#03071294] font-medium text-md">
+                use by January 2024
+              </p>
+            </div>
+            <img
+              src="images/cupon-devider.png"
+              alt="cupon-devider"
+              class="h-full"
+            />
+
+            <div class="flex flex-col justify-center pr-6 text-center">
+              <h3
+                class="text-3xl md:text-4xl font-bold text-[#030712d2] xl:text-5xl my-2"
+              >
+                NEW15
+              </h3>
+              <p class="text-[#03071294] font-medium text-xl">Coupon Code</p>
+            </div>
+          </div>
+
+          <!-- Card -->
+          <div class="bg-[#F78C9C] flex rounded-3xl w-full lg:w-auto">
+            <div class="flex flex-col justify-center p-8">
+              <h3 class="text-4xl font-bold text-[#030712d2] xl:text-5xl">
+                20% OFF
+              </h3>
+              <h5 class="text-lg font-bold text-[#030712d2] my-2">
+                on your next purchase
+              </h5>
+              <p class="text-[#03071294] font-medium text-md">
+                use by January 2024
+              </p>
+            </div>
+            <img
+              src="images/cupon-devider.png"
+              alt="cupon-devider"
+              class="h-full"
+            />
+
+            <div class="flex flex-col justify-center pr-6 text-center">
+              <h3
+                class="text-3xl md:text-4xl font-bold text-[#030712d2] xl:text-5xl my-2"
+              >
+                Couple20
+              </h3>
+              <p class="text-[#03071294] font-medium text-xl">Coupon Code</p>
+            </div>
+          </div>
+        </div>
+        <div class="flex items-center justify-center">
+          <button
+            class="px-8 py-4 text-xl text-[#1DD100] border border-[#1DD100] rounded-xl font-bold duration-300 hover:bg-[#1DD100] hover:text-white"
+          >
+            See All Offers
+          </button>
+        </div>
+      </section>
+
+      <!-- Ticket Booking Section -->
+      <section id="ticket-booking "></section>
+    </main>
+    <footer class="bg-[#030712] pt-20 pb-10 px-2">
+      <div class="container mx-auto">
+        <div
+          class="flex flex-col items-center text-center justify-between border-b border-dashed border-[#ffffff2d] pb-10 md:text-left md:flex-row"
+        >
+          <div>
+            <h2 class="my-5 text-5xl font-bold text-white">P-Ticket</h2>
+            <p class="max-w-xs text-gray-300">
+              P-Ticket is a digital platform to make your daily commuting
+              better.
+            </p>
+          </div>
+          <div>
+            <h4 class="my-4 text-xl text-white">Download our app</h4>
+            <img src="./images/playstore.png" alt="playstore" />
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col items-center justify-between mt-10 md:flex-row"
+        >
+          <p class="text-lg text-[#ffffff63]">
+            &#169; all rights reserved, P-Ticket services limited.2024
+          </p>
+
+          <ul class="flex items-center justify-center gap-5 text-[#ffffffa8]">
+            <li>Terms & condition</li>
+            <li>Return & refund policy</li>
+            <li>Privacy policy</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
     <script src="./scripts/app.js"></script>
   </body>
