--- a/index.html
+++ b/index.html
@@ -191,7 +191,193 @@
       </section>
 
       <!-- Ticket Booking Section -->
-      <section id="ticket-booking "></section>
+      <section
+        id="ticket-booking"
+        class="pt-32 mt-10 pb-20 bg-[#F7F8F8] rounded-t-3xl border-t-4 border-[#1DD100]"
+      >
+        <h2 class="text-3xl font-bold text-center md:text-5xl">
+          P.H Paribahan
+        </h2>
+        <p class="max-w-xl mx-auto my-5 text-center">
+          Yes, you can run unit tests and view the results directly within the
+          app. The integrated testing features allow for a streamlined .
+        </p>
+
+        <!-- container -->
+        <div class="container mx-auto">
+          <!-- ticket price and boarding area -->
+          <div
+            class="flex items-center justify-center mt-20 bg-white rounded-3xl"
+          >
+            <div class="flex-1 px-8">
+              <!-- Top Area -->
+              <div class="flex items-center justify-between">
+                <!-- Left -->
+                <div class="flex gap-5">
+                  <img
+                    src="./images/bus-logo.png"
+                    alt="bus"
+                    class="object-contain"
+                  />
+                  <div class="space-y-2">
+                    <h2 class="text-4xl font-bold">Greenline Paribahan</h2>
+                    <p class="text-[#0307129f]">Coach-009-WEB ! AC_Business</p>
+                  </div>
+                </div>
+
+                <!-- Right -->
+                <button
+                  class="flex gap-2 bg-[#1cd1002a] px-8 py-4 rounded-xl text-[#1DD100] font-sans text-xl font-semibold"
+                >
+                  <img src="./images/seat-green.png" alt="" />
+                  <span id="seats-count">40</span> <span>Seats left</span>
+                </button>
+              </div>
+
+              <!-- bottom area -->
+              <div class="p-6 bg-[#F7F8F8] rounded-2xl mt-8">
+                <!-- Row one -->
+                <div
+                  class="flex items-center justify-between p-4 border-b border-dashed"
+                >
+                  <h4 class="text-xl font-semibold text-[#0307129f]">Route</h4>
+                  <h3 class="text-xl font-semibold text-[#030712]">
+                    Dhaka - Sylhet
+                  </h3>
+                </div>
+                <!-- Row tow -->
+                <div
+                  class="flex items-center justify-between p-4 border-b border-dashed"
+                >
+                  <h4 class="text-xl font-semibold text-[#0307129f]">
+                    Departure Time
+                  </h4>
+                  <h3 class="text-xl font-semibold text-[#030712]">9:00 PM</h3>
+                </div>
+                <!-- Row three -->
+                <div class="flex items-center gap-8 pt-8 justify-evenly">
+                  <button
+                    class="px-8 py-4 bg-[#03071210] w-full rounded-xl font-semibold"
+                  >
+                    Boarding Point - Laxmipur
+                  </button>
+                  <button
+                    class="px-8 py-4 bg-[#03071210] w-full rounded-xl font-semibold"
+                  >
+                    Dropping Point - Bogura
+                  </button>
+                  <button
+                    class="px-8 py-4 bg-[#03071210] w-full rounded-xl font-semibold"
+                  >
+                    Est. Time - 11 Hour
+                  </button>
+                </div>
+              </div>
+            </div>
+            <img
+              src="./images/info-devider.png"
+              alt="devider"
+              class="object-cover"
+            />
+            <div class="flex flex-col items-center justify-center p-10 pr-20">
+              <img src="./images/fare.png" alt="taka" class="mb-4" />
+              <h2 class="text-2xl font-bold md:text-4xl lg:text-5xl">
+                550 Taka
+              </h2>
+              <p class="mt-2 text-xl font-medium">Per Seat</p>
+            </div>
+          </div>
+
+          <!-- Buy you ticket -->
+          <div class="flex flex-col p-8 mt-12 bg-white rounded-3xl md:flex-row">
+            <!-- Select Seat area -->
+            <div class="flex-1 border-r border-dashed">
+              <!-- top area -->
+              <div class="p-4 mr-5 border-b border-dashed">
+                <h2
+                  class="text-xl font-semibold text-left md:text-2xl lg:text-3xl"
+                >
+                  Select Your Seat
+                </h2>
+              </div>
+              <!-- middle area -->
+              <div
+                class="flex items-center justify-between p-4 mr-5 border-b border-dashed"
+              >
+                <h2
+                  class="text-xl font-medium text-[#0307128f] flex gap-4 items-center"
+                >
+                  <img src="./images/seat-gray.png" alt="" />
+                  Available
+                </h2>
+
+                <button
+                  class="flex gap-2 px-8 py-4 rounded-xl text-[#1DD100] font-sans text-xl font-semibold"
+                >
+                  <img src="./images/seat-green-filled.png" alt="seat" />
+                  <span>0</span>
+                  <span>Selected</span>
+                </button>
+              </div>
+              <!-- bottom area -->
+              <div class="flex items-center justify-end p-8">
+                <button class="bg-[#03071218] px-8 py-3 rounded-xl">
+                  <img src="./images/steering-wheel.png" alt="" />
+                </button>
+              </div>
+
+              <!-- Seat area -->
+
+              <!-- Seat Container -->
+              <div class="mt-10 seat-container">
+                <!-- Seat Row -->
+                <div class="flex items-center gap-5 seat-row">
+                  <h2 class="text-2xl text-[#0307128a] font-semibold">A</h2>
+                  <div class="flex gap-8 jus">
+                    <div class="space-x-5">
+                      <button
+                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                      >
+                        A1
+                      </button>
+                      <button
+                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                      >
+                        A2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                      >
+                        A3
+                      </button>
+                      <button
+                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                      >
+                        A4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <!--  -->
+              </div>
+            </div>
+
+            <!-- confirm you ticket -->
+            <div class="w-[435px]">
+              <!-- top area -->
+              <div class="p-4 ml-5 border-b border-dashed">
+                <h2
+                  class="text-xl font-semibold text-left md:text-2xl lg:text-3xl"
+                >
+                  Confirm You Ticket
+                </h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="bg-[#030712] pt-20 pb-10 px-2">
       <div class="container mx-auto">
