create seat select button

--- a/index.html
+++ b/index.html
@@ -330,42 +330,360 @@
 
               <!-- Seat Container -->
               <div class="mt-10 seat-container">
-                <!-- Seat Row -->
-                <div class="flex items-center gap-5 seat-row">
-                  <h2 class="text-2xl text-[#0307128a] font-semibold">A</h2>
-                  <div class="flex gap-8 jus">
+                <!-- Seat Row A -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">A</h2>
+                  <div class="flex justify-around w-full gap-8">
                     <div class="space-x-5">
                       <button
-                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                        id="a1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
                       >
-                        A1
+                        a1
                       </button>
                       <button
-                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                        id="a2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
                       >
-                        A2
+                        a2
                       </button>
                     </div>
                     <div class="space-x-5">
                       <button
-                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                        id="a3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
                       >
-                        A3
+                        a3
                       </button>
                       <button
-                        class="px-8 font-sans text-xl btn text-[#03071273]"
+                        id="a4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
                       >
-                        A4
+                        a4
                       </button>
                     </div>
                   </div>
                 </div>
-                <!--  -->
+
+                <!-- Seat Row B -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">B</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="b1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        b1
+                      </button>
+                      <button
+                        id="b2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#1DD100] rounded-xl font-sans text-3xl text-[#fff] uppercase"
+                      >
+                        b2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="b3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        b3
+                      </button>
+                      <button
+                        id="b4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        b4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row C -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">C</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="c1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        c1
+                      </button>
+                      <button
+                        id="c2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        c2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="c3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        c3
+                      </button>
+                      <button
+                        id="c4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        c4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row D -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">D</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="d1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        d1
+                      </button>
+                      <button
+                        id="d2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        d2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="d3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        d3
+                      </button>
+                      <button
+                        id="d4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        d4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row E -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">E</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="e1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        e1
+                      </button>
+                      <button
+                        id="e2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        e2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="e3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        e3
+                      </button>
+                      <button
+                        id="e4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        e4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row F -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">F</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="f1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        f1
+                      </button>
+                      <button
+                        id="f2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        f2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="f3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        f3
+                      </button>
+                      <button
+                        id="f4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        f4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row G -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">G</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="g1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        g1
+                      </button>
+                      <button
+                        id="g2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        g2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="g3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        g3
+                      </button>
+                      <button
+                        id="g4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        g4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row H -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">H</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="h1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        h1
+                      </button>
+                      <button
+                        id="h2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        h2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="h3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        h3
+                      </button>
+                      <button
+                        id="h4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        h4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row I -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">I</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="i1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        i1
+                      </button>
+                      <button
+                        id="i2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        i2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="i3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        i3
+                      </button>
+                      <button
+                        id="i4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        i4
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Seat Row J -->
+                <div class="flex items-center gap-5 my-8">
+                  <h2 class="text-3xl text-[#0307128a] font-semibold">J</h2>
+                  <div class="flex justify-around w-full gap-8">
+                    <div class="space-x-5">
+                      <button
+                        id="j1"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        j1
+                      </button>
+                      <button
+                        id="j2"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        j2
+                      </button>
+                    </div>
+                    <div class="space-x-5">
+                      <button
+                        id="j3"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        j3
+                      </button>
+                      <button
+                        id="j4"
+                        class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
+                      >
+                        j4
+                      </button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
             <!-- confirm you ticket -->
-            <div class="w-[435px]">
+            <div class="w-2/5">
               <!-- top area -->
               <div class="p-4 ml-5 border-b border-dashed">
                 <h2
