create a function to add selected element in ticket cart

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css" />
+
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
+      body {
+        font-family: "Raleway", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <header class="container relative mx-auto">
@@ -66,7 +73,7 @@
           <button class="my-5">
             <a
               href="#ticket-booking"
-              class="bg-[#1DD100] text-[#030712] font-bold py-4 px-8 rounded-xl text-xl cursor-pointer"
+              class="bg-[#1DD100] text-[#fff] font-bold py-4 px-8 rounded-xl text-xl cursor-pointer"
             >
               Buy Tickets</a
             >
@@ -333,8 +340,8 @@
                 <!-- Seat Row A -->
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">A</h2>
-                  <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                  <div class="flex items-center justify-around w-full gap-8">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="a1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -348,7 +355,7 @@
                         a2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="a3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -369,7 +376,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">B</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="b1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -383,7 +390,7 @@
                         b2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="b3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -404,7 +411,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">C</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="c1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -418,7 +425,7 @@
                         c2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="c3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -439,7 +446,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">D</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="d1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -453,7 +460,7 @@
                         d2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="d3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -474,7 +481,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">E</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="e1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -488,7 +495,7 @@
                         e2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="e3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -509,7 +516,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">F</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="f1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -523,7 +530,7 @@
                         f2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="f3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -544,7 +551,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">G</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="g1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -558,7 +565,7 @@
                         g2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="g3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -579,7 +586,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">H</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="h1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -593,7 +600,7 @@
                         h2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="h3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -614,7 +621,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">I</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="i1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -628,7 +635,7 @@
                         i2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="i3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -649,7 +656,7 @@
                 <div class="flex items-center gap-5 my-8">
                   <h2 class="text-3xl text-[#0307128a] font-semibold">J</h2>
                   <div class="flex justify-around w-full gap-8">
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="j1"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -663,7 +670,7 @@
                         j2
                       </button>
                     </div>
-                    <div class="space-x-5">
+                    <div class="space-y-5 xl:space-x-5 xl:space-y-0">
                       <button
                         id="j3"
                         class="seat_card min-w-[150px] h-[56px] bg-[#0307121a] rounded-xl font-sans text-3xl text-[#03071273] uppercase"
@@ -711,25 +718,12 @@
                 </div>
 
                 <!-- Ticket Cart -->
-                <div class="flex items-center justify-between py-4">
-                  <h4 class="font-sans text-[#03071288] font-medium">C2</h4>
-                  <h4 class="ml-16 font-sans text-[#03071288] font-medium">
-                    Economoy
-                  </h4>
-                  <h4 class="font-sans text-[#03071288] font-medium">550tk</h4>
-                </div>
-                <div class="flex items-center justify-between py-4">
-                  <h4 class="font-sans text-[#03071288] font-medium">C2</h4>
-                  <h4 class="ml-16 font-sans text-[#03071288] font-medium">
-                    Economoy
-                  </h4>
-                  <h4 class="font-sans text-[#03071288] font-medium">550tk</h4>
-                </div>
+                <div id="ticket-cart"></div>
 
                 <!-- Price arae -->
                 <div class="border-t border-dashed">
                   <!-- Total Price -->
-                  <div class="flex items-center justify-between">
+                  <div class="flex items-center justify-between pt-4">
                     <h4 class="font-sans text-xl font-semibold">Total Price</h4>
                     <h4
                       id="total-price"
@@ -861,6 +855,7 @@
       </div>
     </footer>
 
+    <script src="./scripts/utility.js"></script>
     <script src="./scripts/app.js"></script>
   </body>
 </html>
